# qcu_mrhs

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  readme.md
bak/: su_n_m_rhs_dslash.cuh  su_n_m_rhs_matmul.cuh
include/: cuda_utils.cuh  qcu.h  qcu_enum.h  qcu_float_float2_wrapper.cuh  qcu_float_float2_wrapper.h  qcu_helper_macro.h  qcu_interface.h  qcu_macro.h  qcu_utils.h  qcu_wmma_constant.h
include/communication/: communicate_ghost.h  communication_interface.h  communicator.h
include/complex/: qcu_complex.cuh
include/data_format/: qcu_data_format_shift.cuh
include/desc/: qcu_desc.h
include/kernel/: check_boundary.cuh  complex_matmul.cuh  qcu_gamma.cuh  shift_data_type.cuh  su_n_m_rhs_dslash.cuh  su_n_m_rhs_dslash_new.cuh  su_n_m_rhs_matmul.cuh  sun_mrhs_wilson_dslash_ghost_simt.cuh  sun_mrhs_wilson_dslash_simt.cuh  transpose_2dim.cuh
include/kernel/copy_gauge_fermion/: copy_color_spinor.cuh  copy_complex_vector.cuh  copy_gauge.cuh
include/kernel/copy_vector/: copy_color_spinor.cuh  copy_complex_vector.cuh
include/kernel/element_wise/: c_axpby.cuh  c_axpbypcz.cuh  c_xpay.cuh  c_xsay.cuh  element_wise_blas.cuh  elementwise_div.cuh  elementwise_init.cuh  elementwise_mul.cuh
include/kernel/gemm/: qcu_gemm_configure.cuh  qcu_gemm_loader.cuh  qcu_gemm_threadblock_idx.cuh
include/kernel/reduction/: operation.cuh  reduction.cuh
include/point/: qcu_point.cuh
include/qcd/: qcu_dslash.h  qcu_dslash_wilson.h
include/qcu_base/: qcu_alloc.h  qcu_base.h
include/qcu_blas/: qcu_blas.h  qcu_blas_complex_axpby.h  qcu_blas_complex_axpbypcz.h  qcu_blas_complex_dotc.h  qcu_blas_complex_norm.h  qcu_blas_complex_xpay.h  qcu_blas_complex_xsay.h  qcu_blas_elementwise_div.h  qcu_blas_elementwise_init.h  qcu_blas_elementwise_mul.h  qcu_transpose_2d.h
include/qcu_config/: qcu_config.h
include/qcu_cuda/simt_impl/threadblock/: default_dslash_gemm_kernel.cuh  matrix_loader.cuh
include/qcu_cuda/tensor_core_impl/device/: dslash_wilson_tensorOp.cuh
include/solver/: bicgstab.cuh  solver.h
include/timer/: timer.h
src/: interface.cpp  interface.cu  qcu_interface.cpp  qcu_interface.cu  qcu_utils.cpp  qcu_utils.cu
src/communication/: communication_impl.cpp  mpi_communicator.cpp  nccl_communicator.cu
src/data_format/: qcu_data_format_shift.cu
src/new_impl/dslash/: wilson_dslash.cu
src/qcd/: qcu_dslash_wilson.cu  qcu_wilson_dslash.cu  qcu_wilson_dslash_simt.cu  qcu_wilson_dslash_v2.cu
src/qcu_base/: qcu_base_cpu.cpp  qcu_base_cuda.cu
src/qcu_blas/: qcu_blas.cu  qcu_blas_public.h  qcu_complex_axpby.cu  qcu_complex_axpbypcz.cu  qcu_complex_dotc.cu  qcu_complex_norm.cu  qcu_complex_xpay.cu  qcu_complex_xsay.cu  qcu_elementwise_div.cu  qcu_elementwise_init.cu  qcu_elementwise_mul.cu  qcu_transpose_2d.cu
src/qcu_config/: qcu_config.cu
src/solver/: bicg_solve_combined_residual.cu  bicg_solve_separated_residual.cu  bicgstab.cu  bicgstab_interface.cu  bicgstab_solve.cu
src/tests/: test.cu  test_gather.cu  test_shift_datatype.cu  test_wilson_dslash.cu
src/tests/test_inner_prod/: test_inner_prod.cu
tests/: CMakeLists.txt  public_complex_vector.h
tests/small_test/: test_device_function_demo.cu
tests/test_blas/: test_caxpby.cu  test_caxpbypcz.cu  test_cxpay.cu  test_cxsay.cu  test_elementwise_div.cu  test_elementwise_init.cu  test_elementwise_mul.cu
tests/test_caxpby/: test_caxpbypcz.cu  test_cxpay.cu  test_cxsay.cu
tests/test_dslash/: test_wilson_dslash.cu
tests/test_gather/: test_gather.cu
tests/test_inner_prod/: test_inner_prod.cu  test_inner_prod2.cu  test_inner_prod_myself.cu  test_inner_prod_single.cu  timer.h
tests/test_norm/: test_norm.cu
tests/test_reduce/: test_reduce.cu
tests/test_transpose/: test_transpose.cu
